# llm_notable_analysis

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  AGENTIC_MATURITY_TARGET.md  AIOPTIMIZED_SOC_ANALYSIS_AWS_READINESS_ASSESSMENT.md  AIOPTIMIZED_SOC_ANALYSIS_AWS_READINESS_OVERVIEW.md  AIOPTIMIZED_SOC_ANALYSIS_ONPREM_READINESS_ASSESSMENT.md  AIOPTIMIZED_SOC_ANALYSIS_ONPREM_READINESS_OVERVIEW.md  INCIDENT_RESPONSE_MANUAL_WORKFLOW_AND_TOOL_AUTOMATION.md
aws_notable_ecs_demo/: .gitignore  ARCHITECTURE.md  Dockerfile  ECS_DEPLOY.md  INFRA_HANDOFF.md  README.md  S3_PIPELINE_DELTA.md  backend.py  backend_requirements.txt  index.html  main.js  markdown_generator.py  nginx.conf  styles.css  (+2 more)
onprem-llm-sdk/: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
onprem-llm-sdk/docs/: AIRGAP_DISTRIBUTION.md  API_REFERENCE.md  ARCHITECTURE.md  CONSUMER_INTEGRATION.md  DEPLOY_AND_CONSUME.md  HIGH_LEVEL_OVERVIEW.md  LLM_CLIENT_CONTRACT.md  OBSERVABILITY_CONTRACT.md  OPERATIONS_RUNBOOK.md  PACKAGING_RATIONALE.md  README.md  SCRIPTS_REFERENCE.md  SECURITY_SUPPLY_CHAIN.md  TESTING_AND_CI.md
onprem-llm-sdk/examples/: basic_completion.py  sdk_playground.py  systemd_envfile.example
onprem-llm-sdk/scripts/: build_offline_bundle.sh  install_from_bundle.sh  smoke_test_install.sh  verify_bundle.sh
onprem-llm-sdk/src/onprem_llm_sdk/: __init__.py  client.py  config.py  contracts.py  errors.py  logging.py  metrics.py
onprem-llm-sdk/tests/: conftest.py  test_client.py  test_config.py  test_contract_compat.py  test_semaphore_limits.py
(+334 files in other folders)
