[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onprem-llm-sdk"
version = "0.1.0"
description = "Shared Python SDK for local on-prem vLLM consumption."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
  { name = "Security Engineering" }
]
dependencies = [
  "requests>=2.31,<3",
]
keywords = ["vllm", "llm", "onprem", "airgapped", "sdk"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: POSIX :: Linux",
  "Intended Audience :: Information Technology",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "ruff>=0.6,<1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
